--- a/index.html
+++ b/index.html
@@ -56,27 +56,29 @@ Having installed dotjs, an extension to provide automatic script execution for s
 
 Currently the project was only tested on Google Chrome.</p>
 <h2>Install</h2>
-<p>1. Download dependencies
-2. Clone github repo
-3. Place flickr.com.js file into your ~/.js/
-4. Edit the service endpoint of the dotjs file
-5. Go to server/ and start service by executing node daemon.js on</p>
+<ol>
+<li>Download dependencies</li>
+<li>Clone github repo</li>
+<li>Place flickr.com.js file into your ~/.js/</li>
+<li>Edit the service endpoint of the dotjs file</li>
+<li>Go to server/ and start service by executing node daemon.js on</li>
+</ol>
 <h2>License</h2>
-<p>MIT License
-=========
-
-Copyright (C) 2011 by Daniel Ramirez
-
+<p>MIT License<br />
+==============<br />
+<br />
+Copyright (C) 2011 by Daniel Ramirez<br />
+<br />
 Permission is hereby granted, free of charge, to any person obtaining a copy
 of this software and associated documentation files (the "Software"), to deal
 in the Software without restriction, including without limitation the rights
 to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
 copies of the Software, and to permit persons to whom the Software is
 furnished to do so, subject to the following conditions:
-
+<br />
 The above copyright notice and this permission notice shall be included in
 all copies or substantial portions of the Software.
-
+<br />
 THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
 IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
 FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
@@ -85,9 +87,12 @@ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
 OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
 THE SOFTWARE.</p>
 <h2>Authors</h2>
-<p>Daniel Ramirez (hello@danielrmz.com)<br/><br/>      </p>
+<p>Daniel Ramirez (hello@danielrmz.com)
+<br/>
+<br/>      </p>
 <h2>Contact</h2>
-<p>Daniel Ramirez (hello@danielrmz.com)<br/>      </p>
+<p>Daniel Ramirez (hello@danielrmz.com)
+<br/>      </p>
 
 
     <h2>Download</h2>
